# kamaldoc

./: .gitignore  .windsurfrules  README.md  build.bat  implementierungsplan.md  package-lock.json  test_gemma_models.py  test_together_api.py
Click-Prototyp/: README.md  app.js  index.html  styles.css
KamaldocV2/: .gitignore  README.md  decisions.md  docker-compose.yml  todos.md
KamaldocV2/backend/: .env.example  Dockerfile  pyproject.toml
KamaldocV2/backend/kdoc/: __init__.py  main.py  settings.py
KamaldocV2/backend/kdoc/api/: connectors.py  documents.py  doka.py  health.py  me.py  search.py  tasks.py  tools.py
KamaldocV2/backend/kdoc/auth/: jwks.py
KamaldocV2/backend/kdoc/db/: base.py  models.py  session.py
KamaldocV2/backend/kdoc/llm/: mistral_client.py  prompts.py
KamaldocV2/frontend/: capacitor.config.json  index.html  package-lock.json  package.json  vite.config.js
Videos/audio/: _pipeline.py  _pipeline_v2.py  _pipeline_v3.py
Videos/remotion/: package-lock.json  package.json  remotion.config.ts  tsconfig.json
Videos/runway/: _pipeline.py
backend/: .env.example  auth.py  database.py  llm_service.py  main.py  requirements.txt  stress_test.py  subscription.py
frontend/: capacitor.config.json  eslint.config.js  fix-statusbar-keys.mjs  fix-translations.mjs  generate_locales.cjs  index.html  package-lock.json  package.json  vite.config.js
frontend/android/: build.gradle  capacitor.settings.gradle
frontend/public/: manifest.json  sw.js
frontend/scripts/: patch-gradle-wrapper.js
frontend/src/: App.jsx  api.js  config.js  i18n.js  index.css  (+4 more)
(+184 files in other folders)
